--- a/src/main/resources/public/template/document/documentPrint.html
+++ b/src/main/resources/public/template/document/documentPrint.html
@@ -5,6 +5,9 @@
 <head>
     <title th:text="#{document.label.print}"></title>
 </head>
+<th:block layout:fragment="css">
+    <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
+</th:block>
 <body>
 <th:block layout:fragment="content">
     <div class="print-container">
