--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -14,24 +14,22 @@
 <body>
 <th:block layout:fragment="content">
     <div class="document-container">
-        <div class="contents token-document">
-            <div class="button-board-document">
-                <div class="numbering-content">
-                    <label th:text="|#{document.label.docNo} : ${documentNo}|"></label>
+        <form id="frm" name="frm">
+            <div class="document-main flex-column align-items-center">
+                <div class="document-main-header flex-row justify-content-between align-items-center">
+                    <div class="numbering-content">
+                        <label th:text="|#{document.label.docNo} : ${documentNo}|"></label>
+                    </div>
+                    <div class="btn-list">
+                        <button type="button" class="default-line" onclick="openProcessStatusPopUp()" th:text="#{process.label.processMap}"></button>
+                        <div class="btn-list" id="button-panel"></div>
+                        <button type="button" class="default-line" th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])" th:text="#{common.btn.print}"></button>
+                    </div>
                 </div>
-                <div class="btn-list">
-                    <button type="button" class="default-line" onclick="openProcessStatusPopUp()" th:text="#{process.label.processMap}"></button>
-                    <div class="btn-list" id="button-container"></div>
-                    <button type="button" class="default-line" th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])" th:text="#{common.btn.print}"></button>
-                </div>
+                <div class="drawing-board" id="document-panel"></div>
             </div>
-            <div>
-                <form id="frm" name="frm">
-                    <div class="drawing-board" id="document-panel"></div>
-                </form>
-            </div>
-        </div>
-        <div class="token-info"></div>
+        </form>
+        <div class="document-properties"></div>
     </div>
 </th:block>
 </body>
