--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -14,24 +14,22 @@
 <body>
 <th:block layout:fragment="content">
     <div class="document-container">
-        <div class="contents token-document">
-            <div class="button-board">
-                <div class="btn-list">
-                    <button type="button" class="default-line" onclick="openProcessStatusPopUp()"
-                            th:text="#{process.label.processMap}"></button>
-                    <div id="button-container" class="btn-list"></div>
-                    <button type="button" class="default-line"
-                            th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])"
-                            th:text="#{common.btn.print}"></button>
+        <form id="frm" name="frm">
+            <div class="document-main flex-column align-items-center">
+                <div class="document-main-header flex-row justify-content-between align-items-center">
+                    <div class="btn-list">
+                        <button type="button" class="default-line" onclick="openProcessStatusPopUp()"
+                                th:text="#{process.label.processMap}"></button>
+                        <div id="button-panel" class="btn-list"></div>
+                        <button type="button" class="default-line"
+                                th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])"
+                                th:text="#{common.btn.print}"></button>
+                    </div>
                 </div>
+                <div class="drawing-board" id="document-panel"></div>
             </div>
-            <div>
-                <form id="frm" name="frm">
-                    <div class="drawing-board" id="document-panel"></div>
-                </form>
-            </div>
-        </div>
-        <div class="token-info">
+        </form>
+        <div class="document-properties">
             <div class="token-info-tab">
                 <h4 data-target-contents="token-history" th:text="#{token.label.history}"></h4>
                 <h4 data-target-contents="token-related" th:text="#{token.label.relatedInstance}"></h4>
