--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1546,7 +1546,7 @@ input, button, select, optgroup, textarea {
 
 .picker-modal-content-time .hour-group .digit,
 .picker-modal-content-time .minute-group .digit {
-  width: 3.75rem;
+  width: 3.75rem !important;
   height: 3.75rem;
   font-size: 1.75rem;
   font-weight: 500;
@@ -1913,7 +1913,7 @@ label {
   outline: none;
 }
 
-.radio span:first-of-type {
+.radio > span:first-of-type {
   padding-right: 0.625rem;
 }
 
@@ -1996,7 +1996,7 @@ label {
   outline: none;
 }
 
-.checkbox span:first-of-type {
+.checkbox > span:first-of-type {
   padding-right: 0.625rem;
 }
 
@@ -2934,6 +2934,10 @@ button.ghost-line:disabled .icon {
   justify-content: center;
 }
 
+.justify-content-between {
+  justify-content: space-between;
+}
+
 .align-items-start {
   align-items: flex-start;
 }
@@ -3307,7 +3311,7 @@ button.ghost-line:disabled .icon {
 
 .portal-search-main {
   height: 6.5rem;
-  background-color: #f7f8f9;
+  background-color: #F7F8F9;
 }
 
 .portal-search-main .title {
@@ -3317,8 +3321,8 @@ button.ghost-line:disabled .icon {
 
 .portal-search-area {
   height: 8.5rem;
-  background-color: #f7f8f9;
-  border-bottom: 0.0625rem solid #ebebeb;
+  background-color: #F7F8F9;
+  border-bottom: 0.0625rem solid #EBEBEB;
   padding: 3rem 0 3rem 0;
   text-align: center;
 }
@@ -3338,8 +3342,8 @@ button.ghost-line:disabled .icon {
 .portal-search-header {
   height: 15rem;
   padding: 0 0 0 12.75rem;
-  background-color: #f7f8f9;
-  border-bottom: 0.0625rem solid #ebebeb;
+  background-color: #F7F8F9;
+  border-bottom: 0.0625rem solid #EBEBEB;
 }
 
 .portal-search-header .page-title {
@@ -3568,7 +3572,7 @@ button.ghost-line:disabled .icon {
 
 .portal-search-view .flex {
   padding: 3.125rem 19.375rem 9.315rem 19.375rem;
-  background-color: white;
+  background-color: #ffffff;
   display: flex;
   flex-grow: 1;
   height: calc(100vh - 10.375rem);
@@ -3784,8 +3788,8 @@ button.ghost-line:disabled .icon {
 .portal-faq-container {
   height: 15rem;
   padding: 0 0 0 12.75rem;
-  background-color: #f7f8f9;
-  border-bottom: 0.0625rem solid #ebebeb;
+  background-color: #F7F8F9;
+  border-bottom: 0.0625rem solid #EBEBEB;
 }
 
 .portal-faq-container .page-title {
