--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -2216,6 +2216,7 @@ button.point-fill {
 button.point-fill .icon {
   display: inline-block;
   background: #ffffff;
+  vertical-align: middle;
 }
 
 .btn.point-fill:focus, .btn.point-fill:hover,
@@ -2268,6 +2269,7 @@ button.point-line {
 button.point-line .icon {
   display: inline-block;
   background: #0098FF;
+  vertical-align: middle;
 }
 
 .btn.point-line:focus, .btn.point-line:hover,
@@ -2321,6 +2323,7 @@ button.default-fill {
 button.default-fill .icon {
   display: inline-block;
   background: #3F4B56;
+  vertical-align: middle;
 }
 
 .btn.default-fill:focus, .btn.default-fill:hover,
@@ -2373,6 +2376,7 @@ button.default-line {
 button.default-line .icon {
   display: inline-block;
   background: #3F4B56;
+  vertical-align: middle;
 }
 
 .btn.default-line:focus, .btn.default-line:hover,
@@ -2425,6 +2429,7 @@ button.ghost-fill {
 button.ghost-fill .icon {
   display: inline-block;
   background: #3F4B56;
+  vertical-align: middle;
 }
 
 .btn.ghost-fill:focus, .btn.ghost-fill:hover,
@@ -2477,6 +2482,7 @@ button.ghost-line {
 button.ghost-line .icon {
   display: inline-block;
   background: #CCCED1;
+  vertical-align: middle;
 }
 
 .btn.ghost-line:focus, .btn.ghost-line:hover,
@@ -2540,6 +2546,7 @@ button.ghost-line:disabled .icon {
 .btn-group button .icon {
   display: inline-block;
   background: #3F4B56;
+  vertical-align: middle;
 }
 
 .btn-group .btn:focus, .btn-group .btn:hover,
@@ -2644,6 +2651,7 @@ button.ghost-line:disabled .icon {
 .btn-group-toggle button .icon {
   display: inline-block;
   background: #ACB4BF;
+  vertical-align: middle;
 }
 
 .btn-group-toggle .btn:focus, .btn-group-toggle .btn:hover,
