--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      layout:decorator="layout/defaultLayout">
+    xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+    layout:decorator="layout/defaultLayout">
 <head>
     <title th:unless="${users?.userKey}" th:text="#{user.label.createUser}"></title>
     <title th:if="${users?.userKey}" th:text="#{user.label.editUserInfo}"></title>
@@ -32,12 +31,12 @@
                             <input id="userId" name="userId" maxlength="100" th:value="${users?.userId}"
                                    required="required"/>
                         </div>
-                        <div class="form-set">
+                        <div class="form-set" th:if="${users?.userKey != null}">
                             <label class="required" th:text="#{user.label.password}" for="password"></label>
                             <input type="password" id="password" name="password" maxlength="100"
                                    autocomplete="new-password" required="required"/>
                         </div>
-                        <div class="form-set">
+                        <div class="form-set" th:if="${users?.userKey != null}">
                             <label class="required" th:text="#{user.label.rePassword}" for="rePassword"></label>
                             <input type="password" id="rePassword" name="rePassword" maxlength="100"
                                    autocomplete="new-password" required="required"/>
@@ -122,7 +121,8 @@
                     <label class="required" th:text="#{user.label.theme}" for="theme"></label>
                     <select class="theme-color-select" name="theme" id="theme">
                         <option th:each="theme: ${themeList}" th:value="${theme.codeValue}"
-                                th:text="${theme.codeValue}" th:selected="${theme.codeValue} == ${users?.theme}"></option>
+                                th:text="${theme.codeValue}" th:selected="${theme.codeValue} == ${users?.theme}"
+                                th:unless="${theme.codeValue} == 'dark'"></option>
                     </select>
                 </div>
             </div>
@@ -152,8 +152,6 @@
                 </label>
             </div>
             <div class="btn-list btn-bar">
-                <button class="point-fill" type="button" th:if="!${users?.userKey}"
-                        th:text="#{common.btn.register}"></button>
                 <button class="point-fill" type="button" th:if="!${users?.userKey}" th:text="#{auth.user.create}"
                         th:onclick="restSubmit('post', [[@{/rest/users}]])"></button>
                 <button class="point-fill" type="button" th:if="${users?.userKey}" th:text="#{common.btn.modify}"
