--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -53,6 +53,9 @@
             }));
         })();
 
+        window.addEventListener('load', () => {
+            aliceJs.initDesignedSelectTag();
+        });
         /* ]]> */
     </script>
 </th:block>
