#9086 Instance url 관련 정리 1. 목록 조회 url 통일

--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -47,7 +47,7 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                restSearchSubmit('GET', '/rest/processes-admin/list?search=' + encodeURIComponent(search.trim()) + '&offset=' + offsetCount, isScroll);
+                restSearchSubmit('GET', '/rest/processes-admin?search=' + encodeURIComponent(search.trim()) + '&offset=' + offsetCount, isScroll);
             } else {
                 offsetCount = 0;
                 restSearchSubmit('GET', '/processes-admin/list?search=' + encodeURIComponent(search.trim()) + '&offset=' + offsetCount, isScroll);
