--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -49,7 +49,7 @@
                     offsetCount = aliceJs.searchDataCount;
                 }
                 urlParam += '&offset=' + offsetCount;
-                restSearchSubmit('get', '/rest/users/list?' + urlParam, isScroll);
+                restSearchSubmit('get', '/rest/users?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
                 urlParam += '&offset=' + offsetCount;
