#9037 [사용자] admin이 계정 생성 후, 해당 계정 로그인 관련 일감 수정 진행

--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-    xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-    layout:decorator="layout/defaultLayout">
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      layout:decorator="layout/defaultLayout">
 <head>
     <title th:text="#{user.label.editUserInfo}"></title>
 </head>
@@ -20,7 +21,7 @@
             <h3 class="under-bar" th:text="#{user.label.profile}"></h3>
             <div class="row align-top">
                 <div class="col-6">
-                    <div th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
+                    <div  th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
                         <div class="form-set">
                             <div class="label-row">
                                 <label class="required" th:text="#{user.label.id}" for="userId"></label>
